<resources>
    <string name="app_name">Mp3 Player</string>
    <string name="start_time">0:00</string>
    <string name="end_time">0:00</string>
    <string name="album">Album</string>
    <string name="song_artist">Song Artist</string>
    <string name="song_title">Song Title</string>
    <string name="no_repeat_end">The last song on the playlist</string>
    <string name="no_repeat_start">The first song on the playlist</string>
    <string-array name="options_list">
        <item>Music folder</item>
    </string-array>
    <string name="bytes">Bytes</string>
    <string name="previous">Previous</string>
    <string name="directory_message">Choose a directory not a file</string>
    <string name="title_activity_directory_chooser">DirectoryChooser</string>
    <string name="folder_chooser_name">Choose a folder</string>
    <string name="dir">DIR</string>
    <string name="album_cover">Album Cover</string>
    <string name="repeat_button">Repeat Button</string>
    <string name="previous_button">Previous Button</string>
    <string name="play_button">Play Button</string>
    <string name="next_button">Next Button</string>
    <string name="shuffle_button">Shuffle Button</string>
    <string name="icon">Icon</string>
    <string name="all_songs">All Songs</string>
    <string name="playlist_button">Playlist Button</string>
    <string name="playlist_add_button">Playlist Add Button</string>
    <string name="playlist_remove_button">Playlist Remove Button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playlist_choosing">Choose a playlist</string>
    <string name="remove">REMOVE</string>
    <string name="add">ADD</string>
    <string name="ok">OK</string>
    <string name="new_playlist">New Playlist Name</string>
    <string name="create">Create</string>
    <string name="drag_icon">Drag Icon</string>
</resources>
