<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <!-- Song properties -->


    <android.support.constraint.ConstraintLayout
        android:id="@+id/songInfo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/player_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/song_album"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/album"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/song_album_thumbnail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/song_album_thumbnail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/album_cover"
            android:scaleType="fitCenter"
            android:src="@drawable/img_album_art"
            app:layout_constraintBottom_toTopOf="@+id/song_artist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/song_album"
            app:layout_constraintWidth_percent="0.85" />

        <TextView
            android:id="@+id/current_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingStart="@dimen/time_pad"
            android:paddingLeft="@dimen/time_pad"
            android:paddingRight="@dimen/time_pad"
            android:text="@string/start_time"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/seek_bar"
            app:layout_constraintEnd_toStartOf="@+id/end_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/end_time" />

        <TextView
            android:id="@+id/end_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="end"
            android:paddingLeft="@dimen/time_pad"
            android:paddingEnd="@dimen/time_pad"
            android:paddingRight="@dimen/time_pad"
            android:text="@string/end_time"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/seek_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/current_time"
            app:layout_constraintTop_toBottomOf="@+id/song_title" />

        <TextView
            android:id="@+id/song_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/song_artist"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/song_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/song_album_thumbnail" />

        <TextView
            android:id="@+id/song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:ellipsize="marquee"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/song_title"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/current_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/song_artist" />

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/seek_bar_pad"
            android:paddingRight="@dimen/seek_bar_pad"
            android:progressDrawable="@drawable/seekbar_progress"
            android:thumb="@drawable/seek_button_layout"
            android:thumbOffset="@dimen/seek_bar_pad"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_time" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/player_buttons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/player_buttons_color"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songInfo">

        <ImageButton
            android:id="@+id/repeat_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/repeat_button"
            android:scaleType="fitCenter"
            android:src="@drawable/repeat_button"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/shuffle_button"
            app:layout_constraintEnd_toStartOf="@+id/previous_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/shuffle_button"
            app:layout_constraintWidth_percent="0.15" />

        <ImageButton
            android:id="@+id/previous_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/previous_button"
            android:scaleType="fitCenter"
            android:src="@drawable/previous_button"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/next_button"
            app:layout_constraintEnd_toStartOf="@+id/play_button"
            app:layout_constraintStart_toEndOf="@+id/repeat_button"
            app:layout_constraintTop_toTopOf="@+id/next_button"
            app:layout_constraintWidth_percent="0.20" />

        <ImageButton
            android:id="@+id/play_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/play_button"
            android:scaleType="fitCenter"
            android:src="@drawable/play_button"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/next_button"
            app:layout_constraintStart_toEndOf="@+id/previous_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.25" />

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/next_button"
            android:scaleType="fitCenter"
            android:src="@drawable/next_button"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/shuffle_button"
            app:layout_constraintStart_toEndOf="@+id/play_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.20" />

        <ImageButton
            android:id="@+id/shuffle_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/shuffle_button"
            android:scaleType="fitCenter"
            android:src="@drawable/shuffle_button"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/next_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.15" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="390dp" />


    <!-- Song thumbnail -->

    <!-- Song duraion -->


</android.support.constraint.ConstraintLayout>